--- a/07_peticiones_y_respuestas.ipynb
+++ b/07_peticiones_y_respuestas.ipynb
@@ -64,19 +64,21 @@
    "source": [
     "### Atributos de los objetos *request*.\n",
     "\n",
-    "* *scheme*\n",
-    "* *body*\n",
-    "* *encoding*\n",
-    "* *path*\n",
-    "* *path_info*\n",
-    "* *method*\n",
-    "* *content_type*\n",
-    "* *content_params*\n",
-    "* *GET*\n",
-    "* *POST*\n",
-    "* *COOKIES*\n",
-    "* *FILES*\n",
-    "* *META*"
+    "* *scheme*: el cual contiene una cadena de caracteres que describe el esquema de autenticación utilizado para la conexión conforme a la [RFC7617](https://tools.ietf.org/html/rfc7617). Generalmente es *'http'* o *'https'*. \n",
+    "* *body*: el cual contiene datos que han sido enviados dentro de la petición en formato binario, takes como imágenes, videos, etc.\n",
+    "* *encoding*: el cual contiene una cadena de caracteres con los datos de codificación de la petición.\n",
+    "* *path*: el cual contiene una cadena de caracteres de la ruta del recurso en el servidor sin incluir el esquema o el dominio.\n",
+    "* *path_info*: ofrece información de la ruta capaz de ser procesada por diversos servidores web.\n",
+    "* *method*: el cual contiene una cadena de caracteres que indica el método utilizado para enviar la petición.\n",
+    "* *content_type*: el contiene una cadena de caracteres la cual indica el tipo de contenido de la petición. Los tipos MIME que peuden ser enviados pueden ser consultados en https://developer.mozilla.org/es/docs/Web/HTTP/Basics_of_HTTP/MIME_types.\n",
+    "* *content_params*: contiene un diccionario con lo definición de tipo de contenido en formato *clave:valor*.\n",
+    "* *GET*: contiene un diccionario con los parámetros enviados mediante el método *GET*.\n",
+    "* *POST*: contiene un diccionario con los parámetros enviados mediante el método *POST*.\n",
+    "* *COOKIES*: contiene un diccionario con las cookies enviadas en la petición.\n",
+    "* *FILES*: contiene un diccionario con los datos de los archivos enviados en la petición.\n",
+    "* *META*: Contiene un diccionario con una seri de datos los cuales peuden ser consultados en https://docs.djangoproject.com/en/2.1/ref/request-response/#django.http.HttpRequest.META.\n",
+    "\n",
+    "Los métodos y particularidades de la clase *django.http.HttpRequest* se estudiarán posteriormente."
    ]
   },
   {
@@ -85,7 +87,7 @@
    "source": [
     "## La clase *django.http.HttpResponse*.\n",
     "\n",
-    "Existen diversos tipos de respuestas (responses) que *Django* puede enviar a un cliente. Sin embargo, todas estas respuestas son objetos instanciados de la clase *django.http.HttpResponse*\n",
+    "Existen diversos tipos de respuestas (responses) que *Django* puede enviar a un cliente. Sin embargo, casi todas estas respuestas son subclases de la clase *django.http.HttpResponse*.\n",
     "\n",
     "Las funciones de vista deben de regresar objetos instanciados de dicha clase.\n",
     "\n",
