--- a/12a_operaciones_con_http.ipynb
+++ b/12a_operaciones_con_http.ipynb
@@ -8,12 +8,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ADVERTENCIA:**  \n",
+    "\n",
+    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El paquete *django.http* cuenta con herramientas diseñadas para gestionar las peticiones y repuestas más comunes de *HTTP*, incluyendo algunos mensajes de estado.\n",
+    "\n",
+    "Debido a que *Django* se apega al modelo *MVT*, los recursos de este módulo están diseñados para desplegar aplicaciones basadas en páginas web. Sin embargo, en este capítulo se hará énfasis en aplicaciones enfocasdas en servicios web con *JSON*.\n",
+    "\n",
+    "La referencia de este paquete puede ser consultada en https://docs.djangoproject.com/en/2.1/ref/request-response/."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Los objetos *response*.\n",
+    "\n",
+    "*Django* define a los objetos instanciados de la clase *django.http.HtmlResponse* como los objetos capaces de contener los datos recibidos mediante una petición al servidor.\n",
+    "\n",
+    "En el capítulo [*07_peticiones_y_respuestas.ipynb*](07_peticiones_y_respuestas.ipynb) se estudió de forma \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Respuestas\n",
+    "\n",
+    "* HttpResponse\n",
+    "* JsonResponse\n",
+    "* FileResponse\n",
+    "* StreamingResponse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mensajes serie 300\n",
+    "* HttpResponsePermanentRedirect\n",
+    "* HttpResponseRedirect\n",
+    "\n",
+    "\n",
+    "### Mensajes serie 400\n",
+    "* BadHeaderError\n",
+    "* Http404\n",
+    "* HttpResponseBadRequest\n",
+    "* HttpResponseForbidden\n",
+    "* HttpResponseNotAllowed\n",
+    "* HttpResponseNotFound\n",
+    "\n",
+    "### Mensajes serie 500\n",
+    "\n",
+    "* HttpResponseGone\n",
+    "* HttpResponseNotModified\n",
+    "* HttpResponseServerError\n",
+    "* UnreadablePostError\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sintaxis para regresar un mensaje.\n",
+    "\n",
+    "``` python\n",
+    "HttpResponseServerError('<mensaje>')\n",
+    "``"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## La clase *django.http.QueryDict*.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd .."
+    "cd .."
    ]
   },
   {
@@ -37,7 +126,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "* Iniciar el servidor."
+   ]
   },
   {
    "cell_type": "code",
@@ -49,9 +140,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ADVERTENCIAS:** \n",
+    "\n",
+    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
+    "\n",
+    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "! ./manage.py runserver 0.0.0.0:5000"
@@ -64,24 +168,6 @@
     "http://localhost:5000/main/error\n",
     "\n",
     "http://localhost:5000/main/otro_error"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from django import http"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir(http)"
    ]
   },
   {
