--- a/12b_cliente_operaciones_con_http.ipynb
+++ b/12b_cliente_operaciones_con_http.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta_get = get(\"http://localhost:5000/main/error\")"
+    "respuesta_get = get(\"http://localhost:5000/main/otro_error\")"
    ]
   },
   {
@@ -85,6 +85,15 @@
    "outputs": [],
    "source": [
     "respuesta_post.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "respuesta_post.url"
    ]
   },
   {
