--- a/13_operaciones_con_modelos.ipynb
+++ b/13_operaciones_con_modelos.ipynb
@@ -8,52 +8,267 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```javascript\n",
+    "[{\"numero_de_cuenta\": 1221, \"al_corriente\": false, \"carrera\": \"Arquitectura\", \"nombre\": \"Pedro\", \"primer_apellido\": \"Solis\", \"promedio\": 7.8, \"semestre\": 3, \"segundo_apellido\": \"Cabañas\"},\n",
+    " {\"numero_de_cuenta\": 1222, \"al_corriente\": false, \"carrera\": \"Actuaría\", \"nombre\": \"Yolanda\", \"primer_apellido\": \"Jiménez\",  \"segundo_apellido\": \"Lerdo\", \"promedio\": 6, \"semestre\": 3},\n",
+    " {\"numero_de_cuenta\": 1223, \"al_corriente\": true, \"carrera\": \"Sistemas\", \"nombre\": \"Juan\", \"primer_apellido\": \"Ramos\",  \"segundo_apellido\": \"Breña\", \"promedio\": 8.6, \"semestre\": 9}, \n",
+    " {\"numero_de_cuenta\": 1224, \"al_corriente\": true, \"carrera\": \"Derecho\", \"nombre\": \"Mayra Jimena\", \"primer_apellido\": \"Cervantes\",  \"segundo_apellido\": \"Lisama\", \"promedio\": 9.2, \"semestre\": 12}]\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('src/13/alumnos.json', 'tr') as archivo:\n",
+    "    resultado = json.load(archivo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!./manage.py startapp api"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! tree api"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``` python\n",
+    "from django.contrib import admin\n",
+    "from django.urls import include, path\n",
+    "\n",
+    "urlpatterns = [path('admin/', admin.site.urls), \n",
+    "               path('main/', include('main.urls')),\n",
+    "               path('api/', include('api.urls')),\n",
+    "              ]\n",
+    "``` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp ../src/13/alumnos.json alumnos.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp ../src/13/tutorial_urls.py tutorial/urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``` python\n",
+    "INSTALLED_APPS = [\n",
+    "    'django.contrib.admin',\n",
+    "    'django.contrib.auth',\n",
+    "    'django.contrib.contenttypes',\n",
+    "    'django.contrib.sessions',\n",
+    "    'django.contrib.messages',\n",
+    "    'django.contrib.staticfiles',\n",
+    "    'main',\n",
+    "    'api',\n",
+    "]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp ../src/13/settings.py tutorial/settings.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tutorial.settings as settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "settings.INSTALLED_APPS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``` python\n",
+    "from django.urls import path\n",
+    "form . import views\n",
+    "\n",
+    "urlpatterns = [path('carga', views.carga),]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp ../src/13/api_urls.py api/urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``` python\n",
+    "from django.db import models\n",
+    "\n",
+    "class Alumno(models.Model):\n",
+    "    numero_de_cuenta = models.PositiveIntegerField(unique=True)\n",
+    "    nombre = models.CharField(max_length=50)\n",
+    "    primer_apellido = models.CharField(max_length=50)\n",
+    "    segundo_apellido = models.CharField(max_length=50)\n",
+    "    carrera = models.CharField(max_length=20)\n",
+    "    promedio = models.FloatField()\n",
+    "    al_corriente = models.BooleanField()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp ../src/13/models.py api/models.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``` python\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp ../src/13/views.py api/views.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! ./manage.py makemigrations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! ./manage.py migrate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! ./manage.py runserver 0.0.0.0:5000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://localhost:5000/api/carga"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.tutorialspoint.com/django/django_models.htm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "https://docs.djangoproject.com/en/2.1/topics/db/queries/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from django.conf import settings()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tutorial.main.models import Alumno"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
