--- a/13_operaciones_con_modelos.ipynb
+++ b/13_operaciones_con_modelos.ipynb
@@ -55,7 +55,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! django-admin startproject tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%cd tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cp ../src/13/alumnos.json alumnos.json"
    ]
   },
   {
@@ -89,15 +107,6 @@
     "               path('api/', include('api.urls')),\n",
     "              ]\n",
     "``` "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cp ../src/13/alumnos.json alumnos.json"
    ]
   },
   {
@@ -164,7 +173,8 @@
     "from django.urls import path\n",
     "form . import views\n",
     "\n",
-    "urlpatterns = [path('carga', views.carga),]\n",
+    "urlpatterns = [path('', views.vista),\n",
+    "    path('carga', views.carga),]\n",
     "```"
    ]
   },
@@ -190,6 +200,7 @@
     "    primer_apellido = models.CharField(max_length=50)\n",
     "    segundo_apellido = models.CharField(max_length=50)\n",
     "    carrera = models.CharField(max_length=20)\n",
+    "    semestre = models.PositiveIntegerField()\n",
     "    promedio = models.FloatField()\n",
     "    al_corriente = models.BooleanField()\n",
     "```"
@@ -253,7 +264,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://localhost:5000/api/carga"
+    "http://localhost:5000/api/carga\n",
+    "\n",
+    "http://localhost:5000/api/\n"
    ]
   },
   {
