--- a/13_operaciones_con_modelos.ipynb
+++ b/13_operaciones_con_modelos.ipynb
@@ -22,7 +22,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import json"
@@ -31,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "with open('src/13/alumnos.json', 'tr') as archivo:\n",
@@ -42,7 +46,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -50,18 +54,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "! django-admin startproject tutorial"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%cd tutorial"
@@ -70,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%cp ../src/13/alumnos.json alumnos.json"
@@ -79,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "!./manage.py startapp api"
@@ -88,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "! tree api"
@@ -112,7 +120,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%cp ../src/13/tutorial_urls.py tutorial/urls.py"
@@ -139,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%cp ../src/13/settings.py tutorial/settings.py"
@@ -148,7 +160,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import tutorial.settings as settings"
@@ -158,7 +172,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -181,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%cp ../src/13/api_urls.py api/urls.py"
@@ -209,7 +225,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%cp ../src/13/models.py api/models.py"
@@ -220,14 +238,36 @@
    "metadata": {},
    "source": [
     "``` python\n",
+    "from . import models\n",
+    "from django.http import JsonResponse\n",
+    "import json\n",
     "\n",
+    "campos = {'numero_de_cuenta':int, 'nombre':str, 'primer_apellido':str,\n",
+    "          'segundo_apellido':str, 'carrera':str, 'semestre':int, 'promedio':float,\n",
+    "          'al_corriente':bool}\n",
+    "\n",
+    "def carga(request):\n",
+    "    with open('alumnos.json', 'tr') as archivo:\n",
+    "        alumnos = json.load(archivo)\n",
+    "    for registro in alumnos:\n",
+    "        objeto = models.Alumno()\n",
+    "        for campo in registro:\n",
+    "            setattr(objeto, campo, registro[campo])\n",
+    "        objeto.save()\n",
+    "    return JsonResponse({'respuesta':alumnos})\n",
+    "  \n",
+    "    \n",
+    "def vista(request):\n",
+    "    return JsonResponse({'respuesta':[{campo:getattr(alumno, campo) for campo in campos} for alumno in models.Alumno.objects.all()]})\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%cp ../src/13/views.py api/views.py"
@@ -236,7 +276,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "! ./manage.py makemigrations"
@@ -245,7 +287,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "! ./manage.py migrate"
@@ -254,7 +298,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "! ./manage.py runserver 0.0.0.0:5000"
