--- a/13_operaciones_basicas _con_modelos.ipynb
+++ b/13_operaciones_basicas _con_modelos.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "En este capítulo se estudiarán los métodos más simples de operación de modelos en una base de datos. \n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.1/topics/db/queries/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```javascript\n",
     "[{\"numero_de_cuenta\": 1221, \"al_corriente\": false, \"carrera\": \"Arquitectura\", \"nombre\": \"Pedro\", \"primer_apellido\": \"Solis\", \"promedio\": 7.8, \"semestre\": 3, \"segundo_apellido\": \"Cabañas\"},\n",
     " {\"numero_de_cuenta\": 1222, \"al_corriente\": false, \"carrera\": \"Actuaría\", \"nombre\": \"Yolanda\", \"primer_apellido\": \"Jiménez\",  \"segundo_apellido\": \"Lerdo\", \"promedio\": 6, \"semestre\": 3},\n",
@@ -313,20 +322,6 @@
     "http://localhost:5000/api/carga\n",
     "\n",
     "http://localhost:5000/api/\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://www.tutorialspoint.com/django/django_models.htm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://docs.djangoproject.com/en/2.1/topics/db/queries/"
    ]
   },
   {
