--- a/13_operaciones_basicas _con_modelos.ipynb
+++ b/13_operaciones_basicas _con_modelos.ipynb
@@ -20,12 +20,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Atributo de clase *django.db.Model.objects*.\n",
+    "\n",
+    "Este artibuto de clase contiene un objeto el cual gestiona las relaciones de todos los objetos instanciados del modelo.\n",
+    "\n",
+    "* Crear objetos y ligarlos a la base de datos. \n",
+    "* Realizar consultas con respecto a todos los objetos instanciados.\n",
+    "* Modificar objetos y reflejarlo en la base de datos.\n",
+    "* Eliminar objetos de la base de datos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Métodos de *django.db.Model.objects*.\n",
+    "\n",
+    "* *all()* va a trar un iterador que contiene a todos los objetos instanciados  de la subclase.\n",
+    "* *get()* va a traer a un objeto que cumpla con una expresión lógica. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creación de una API con modelos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El archivo *src/13/alumnos.json* contiene lo siguiente:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```javascript\n",
     "[{\"numero_de_cuenta\": 1221, \"al_corriente\": false, \"carrera\": \"Arquitectura\", \"nombre\": \"Pedro\", \"primer_apellido\": \"Solis\", \"promedio\": 7.8, \"semestre\": 3, \"segundo_apellido\": \"Cabañas\"},\n",
     " {\"numero_de_cuenta\": 1222, \"al_corriente\": false, \"carrera\": \"Actuaría\", \"nombre\": \"Yolanda\", \"primer_apellido\": \"Jiménez\",  \"segundo_apellido\": \"Lerdo\", \"promedio\": 6, \"semestre\": 3},\n",
     " {\"numero_de_cuenta\": 1223, \"al_corriente\": true, \"carrera\": \"Sistemas\", \"nombre\": \"Juan\", \"primer_apellido\": \"Ramos\",  \"segundo_apellido\": \"Breña\", \"promedio\": 8.6, \"semestre\": 9}, \n",
     " {\"numero_de_cuenta\": 1224, \"al_corriente\": true, \"carrera\": \"Derecho\", \"nombre\": \"Mayra Jimena\", \"primer_apellido\": \"Cervantes\",  \"segundo_apellido\": \"Lisama\", \"promedio\": 9.2, \"semestre\": 12}]\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo**\n",
+    "\n",
+    "Importar el archivo y ver su contenido como un objeto de Python."
    ]
   },
   {
@@ -65,7 +112,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Creación de una nueva aplicación."
+   ]
   },
   {
    "cell_type": "code",
@@ -79,6 +128,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Copiar el archvo *src/13/alumnos.json* al directorio base del proyecto *tutorial*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -87,6 +143,13 @@
    "outputs": [],
    "source": [
     "%cp ../src/13/alumnos.json alumnos.json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Crear una nueva aplicación llamada *api*"
    ]
   },
   {
@@ -115,6 +178,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* El archivo  *src/13/tutorial_urls.py* contiene lo siguiente:\n",
+    "\n",
     "``` python\n",
     "from django.contrib import admin\n",
     "from django.urls import include, path\n",
@@ -141,6 +206,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* El archivo *src/13/settings.py* agrga el proyecto *api* a *INSTALLED_APPS*\n",
+    "\n",
     "``` python\n",
     "INSTALLED_APPS = [\n",
     "    'django.contrib.admin',\n",
@@ -192,6 +259,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* El archivo *src/13/api_urls.py* contiene lo siguiente:\n",
+    "\n",
     "``` python\n",
     "from django.urls import path\n",
     "form . import views\n",
@@ -216,6 +285,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* El arcivo *src/13/models.py api/models.py* contiene:\n",
+    "\n",
     "``` python\n",
     "from django.db import models\n",
     "\n",
@@ -225,9 +296,9 @@
     "    primer_apellido = models.CharField(max_length=50)\n",
     "    segundo_apellido = models.CharField(max_length=50)\n",
     "    carrera = models.CharField(max_length=20)\n",
-    "    semestre = models.PositiveIntegerField()\n",
-    "    promedio = models.FloatField()\n",
-    "    al_corriente = models.BooleanField()\n",
+    "    semestre = models.PositiveIntegerField(default=0)\n",
+    "    promedio = models.FloatField(default=0)\n",
+    "    al_corriente = models.BooleanField(default=True)\n",
     "```"
    ]
   },
@@ -246,6 +317,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* El archivo *src/13/views.py* contiene las funciones de vista de la API.\n",
+    "\n",
     "``` python\n",
     "from . import models\n",
     "from django.http import JsonResponse\n",
@@ -256,13 +329,20 @@
     "          'al_corriente':bool}\n",
     "\n",
     "def carga(request):\n",
+    "    '''Función encargada de crear objetos instaciados de models.Alumno y de poblar la base de datos.'''\n",
+    "    # Carga los datos de un archivo JSON\n",
     "    with open('alumnos.json', 'tr') as archivo:\n",
     "        alumnos = json.load(archivo)\n",
+    "    #Crea un objeto a partir de cada elemento tipo dict de alumnos\n",
     "    for registro in alumnos:\n",
+    "        # Crea un objeto instanciando la clase Alumno\n",
     "        objeto = models.Alumno()\n",
+    "        # Asigna cada campo a su atributo correspondiente\n",
     "        for campo in registro:\n",
     "            setattr(objeto, campo, registro[campo])\n",
+    "        # Guarda a la base dce datos.\n",
     "        objeto.save()\n",
+    "    #Regresa la relaciónde alumnos dados de alta.\n",
     "    return JsonResponse({'respuesta':alumnos})\n",
     "  \n",
     "    \n",
