--- a/15_cliente_api_rest.ipynb
+++ b/15_cliente_api_rest.ipynb
@@ -45,28 +45,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datos ={'nombre': 'Ramiro', 'primer_apellido': 'Salas', 'segundo_apellido': 'Mijangos', 'carrera': 'Derecho',\n",
-    "        'semestre': 7, 'promedio': 8.5, 'al_corriente':True}"
+    "datos ={'nombre':'Ramiro', 'primer_apellido':'Salas', 'segundo_apellido':'Mijangos', \n",
+    "        'carrera':'Derecho', 'semestre':1, 'promedio':9, 'al_corriente':True}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta = requests.post(\"http://localhost:5000/api/1229\", data=datos)"
+    "respuesta = requests.post(\"http://localhost:5000/api/1225\", data=datos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "400"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "respuesta.status_code"
    ]
@@ -86,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta = requests.delete(\"http://localhost:5000/api/1229\")"
+    "respuesta = requests.delete(\"http://localhost:5000/api/1225\")"
    ]
   },
   {
@@ -114,6 +125,13 @@
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
     "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
